--- a/intro.css
+++ b/intro.css
@@ -31,8 +31,8 @@
       body{
         background-repeat: no-repeat;
         background-position: center center;
-        /*background-image:url('https://github.com/macy1215/resume/blob/32af97268ebe13d13a1a8c11d7932251a7baf8b6/CD57693E-8811-4B98-B182-942CB1FC3975_1_105_c.jpeg');
-      */
+        background-image:url('CD57693E-8811-4B98-B182-942CB1FC3975_1_105_c.jpeg');
+      
       }
       
       @media (max-width:1250px) {
