--- a/intro.css
+++ b/intro.css
@@ -30,6 +30,8 @@
       }
       body{
         background-repeat: no-repeat;
+        background-attachment: scroll;
+        background-size: 100% 18px;
         background-position: center center;
         background-image:url('CD57693E-8811-4B98-B182-942CB1FC3975_1_105_c.jpeg');
       
