--- a/intro.css
+++ b/intro.css
@@ -29,12 +29,14 @@
         margin-bottom:50px;
       }
       body{
+        /*
         background-repeat: no-repeat;
         background-attachment: scroll;
         background-size: 100% 18px;
-        background-position: center center;
+        background-position: top center;
+        background: linear-gradient(white 30%, rgba(black,0)), linear-gradient(rgba(white,0), white 70%) bottom;
         background-image:url('CD57693E-8811-4B98-B182-942CB1FC3975_1_105_c.jpeg');
-      
+        */
       }
       
       @media (max-width:1250px) {
