--- a/intro.css
+++ b/intro.css
@@ -40,7 +40,7 @@
       }
       .footer{
             background-color:color:#470063;
-            text-color:#47006350;
+            text-color:#470063;
             font-size:12px;
       }
       
