--- a/intro.css
+++ b/intro.css
@@ -40,6 +40,7 @@
       }
       .footer{
             background-color:color:#470063;
+            opacity: .5;
             text-color:#470063;
             font-size:12px;
       }
