--- a/intro.css
+++ b/intro.css
@@ -39,8 +39,8 @@
         */
       }
       .footer{
-            background-color:color:#470063;
-            opacity: .5;
+            background-color:#470063;
+            opacity:0.5;
             text-color:#470063;
             font-size:12px;
       }
