--- a/intro.css
+++ b/intro.css
@@ -41,7 +41,7 @@
       .footer{
             background-color:#470063;
             opacity:0.5;
-            text-color:#470063;
+            color:#470063;
             font-size:12px;
       }
       
