--- a/intro.css
+++ b/intro.css
@@ -41,8 +41,9 @@
       .footer{
             background-color:#252627;
             opacity:0.5;
-            color:#470063;
+            color:#ffff;
             font-size:12px;
+            text-align:center;
       }
       
       @media (max-width:1250px) {
