--- a/intro.css
+++ b/intro.css
@@ -45,6 +45,7 @@
             font-size: 12px;
             text-align: center;
             padding: 10px 0px;
+            margin-top:100px;
       }
       
       @media (max-width:1250px) {
