--- a/intro.css
+++ b/intro.css
@@ -29,6 +29,12 @@
         margin-bottom:50px;
       }
       body{
+           margin:0px;
+           background-image:url('CD57693E-8811-4B98-B182-942CB1FC3975_1_105_c.jpeg');
+           background-size: cover;
+           background-repeat: no-repeat;
+           background-attachment: fixed;
+           opacity:0.5;
         /*
         background-repeat: no-repeat;
         background-attachment: scroll;
