--- a/intro.css
+++ b/intro.css
@@ -30,12 +30,14 @@
       }
       body{
            margin:0px;
-           /*
+           background-color:rgba(0,0,0,.3);
            background-image:url('CD57693E-8811-4B98-B182-942CB1FC3975_1_105_c.jpeg');
            background-size: cover;
            background-repeat: no-repeat;
            background-attachment: fixed;
            opacity:0.5;
+           /*
+          
         
         background-repeat: no-repeat;
         background-attachment: scroll;
