--- a/intro.css
+++ b/intro.css
@@ -31,6 +31,7 @@
       body{
            margin:0px;
            background-color:rgba(210,210,210,.7);
+           backgroung-blend-mode:multipy;
            background-image:url('CD57693E-8811-4B98-B182-942CB1FC3975_1_105_c.jpeg');
            background-size: cover;
            background-repeat: no-repeat;
