--- a/intro.css
+++ b/intro.css
@@ -52,6 +52,7 @@
            background-image:url('CD57693E-8811-4B98-B182-942CB1FC3975_1_105_c.jpeg');
            z-index:-1;
            opacity:.3;
+           left: 0; right: 0; top: 0; bottom: 0;
            background-repeat: no-repeat;
            background-size: cover;
            background-attachment: fixed;
