--- a/intro.css
+++ b/intro.css
@@ -42,10 +42,14 @@
         background-image:url('CD57693E-8811-4B98-B182-942CB1FC3975_1_105_c.jpeg');
         */
       }
-      .img_bg{
-           position:relative;
-           z-index:0;
+      .cross-fade-image{
+           background-repeat: no-repeat;
+           background-size: cover;
+           background-attachment: fixed;
+           background-image:cross-fade (url('CD57693E-8811-4B98-B182-942CB1FC3975_1_105_c.jpeg'),30%) ;
       }
+      
+      /*
       .img_bg::before{
            content:'';
            position:absolute;
@@ -57,6 +61,7 @@
            background-size: cover;
            background-attachment: fixed;
       }
+      */
       .footer{
             background-color: #462255;
             opacity: .5;
