--- a/intro.css
+++ b/intro.css
@@ -73,6 +73,8 @@
            background-repeat: no-repeat;
            background-size: cover;
            background-attachment: fixed;
+           min-height: 100%;
+           width: 100%;
       }
       
       .footer{
