--- a/intro.css
+++ b/intro.css
@@ -68,6 +68,7 @@
       */
       .bg-coffee{
            position:absolute;
+           background-size: cover;
            z-index:-1;
            opacity:.7;
            background-repeat: no-repeat;
