--- a/intro.css
+++ b/intro.css
@@ -30,6 +30,10 @@
       }
       body{
            margin:0px;
+           background-size: cover;
+           z-index:-1;
+           background-repeat: no-repeat;
+           background-attachment: fixed;
             }
            
            /*
