--- a/intro.css
+++ b/intro.css
@@ -34,6 +34,7 @@
            z-index:-1;
            background-repeat: no-repeat;
            background-attachment: fixed;
+            backgroung-image:url('coffee.png');
             }
            
            /*
