--- a/intro.css
+++ b/intro.css
@@ -8,6 +8,7 @@
       .content-box{
         flex:none;  
         width:70%;
+        background-color:rgba(255,255,255, 0.5);)
       }
       h3{
         padding:12px 8px;
