--- a/intro.css
+++ b/intro.css
@@ -38,6 +38,9 @@
            background-attachment: fixed;
            background-image:url('coffee.png');
             }
+      .tag{
+            margin-right:12px;
+            }
            
            /*
           opacity:0.5;
